Completed Capstone Project.

--- a/Capstone/DataAnalyzer.ipynb
+++ b/Capstone/DataAnalyzer.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea behind this project is to build a model for predicting CNX Nifty movements. Algorithms used will try to predict the direction of tomorrow’s exchange closing price, whether it is going to be lower or higher with respect to today's price. Decision process involves CNX Nifty daily returns over the period of time. \n",
+    "\n",
+    "At the end I have written a simple trading strategy if the probability of the day will be “up”, zthe strategy purchases 500 shares of CNX Nifty and sells it at the end of the day. I start with 1M INR and buy and sell only playing with this amount of money. And finally compare the result against benchmark.\n",
+    "\n",
+    "<b>Features:</b>\n",
+    "\n",
+    "    CNX Nifty 50\n",
+    "    NASDAQ Composite \n",
+    "\tFrankfurt DAX \n",
+    "\tLondon FTSE-100 \n",
+    "\tTokyo Nikkei-225\n",
+    "\tHong Kong Hang Seng \n",
+    "\tAustralia ASX-200 \n",
+    "\tShanghai Composite Index\n",
+    "\t \n",
+    "\n",
+    "I have used yahoo as a data source. Downloaded data-frame contains the following columns:\n",
+    "\n",
+    "\tDate      :  in days\n",
+    "\tOpen      :  price of the stock at the opening of the trading\n",
+    "\tHigh      :  highest price of the stock during the trading day\n",
+    "\tLow       :  lowest price of the stock during the trading day\n",
+    "\tClose     :  price of the stock at the closing of the trading\n",
+    "\tVolume    :  amount of stocks traded\n",
+    "\tAdj Close :  price of the stock at the closing of the trading\n",
+    "                    adjusted with dividends \n",
+    "I am maily interested in the Adj Close.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 262,
    "metadata": {
@@ -36,7 +69,7 @@
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn import neighbors\n",
+    "from sklearn import neighbors \n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.svm import SVR\n",
@@ -193,6 +226,14 @@
    "source": [
     "def count_missing(dataframe):\n",
     "    return (dataframe.shape[0] * dataframe.shape[1]) - dataframe.count().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add an extra column in the data frame for change in daily return. If rtuern is greater than 0 make it +1 else -1.\n",
+    "<br/>Split data into training and test data."
    ]
   },
   {
@@ -362,35 +403,6 @@
     "        portfolio['returns'] = portfolio['total'].pct_change()\n",
     "        return portfolio"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1279,6 +1291,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Due to missing data plot is broken."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b> Count missing data(NaN) after simple merge</b>\n",
     "* Fill the missing data."
    ]
@@ -1688,7 +1716,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange behavior"
+    "### Strange behavior\n",
+    "According to Scikit learn GridSearchCV best parameters for svc is kernel=rbf and C=1. But when I feed the data SVC kernel linear has better result which is suprising. "
    ]
   },
   {
@@ -1800,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 334,
    "metadata": {
     "collapsed": false
    },
@@ -1809,52 +1838,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            price_diff       profit         total   returns\n",
-      "Date                                                       \n",
-      "2015-07-30    0.000000       0.0000  1000000.0000       NaN\n",
-      "2015-07-31    0.000000       0.0000  1000000.0000  0.000000\n",
-      "2015-08-03    0.000000       0.0000  1000000.0000  0.000000\n",
-      "2015-08-04    0.000000      -0.0000  1000000.0000  0.000000\n",
-      "2015-08-05    0.000000      -0.0000  1000000.0000  0.000000\n",
-      "2015-08-06    2.850586    1425.2930  1001425.2930  0.001425\n",
-      "2015-08-07  -16.200196    8100.0980  1009525.3910  0.008089\n",
-      "2015-08-10  -51.400391   25700.1955  1035225.5865  0.025458\n",
-      "2015-08-11  -86.100586   43050.2930  1078275.8795  0.041585\n",
-      "2015-08-12  -96.250000  -48125.0000  1030150.8795 -0.044631\n",
-      "2015-08-13  -28.600586  -14300.2930  1015850.5865 -0.013882\n",
-      "2015-08-14  116.200196   58100.0980  1073950.6845  0.057194\n",
-      "2015-08-17  -53.200195  -26600.0975  1047350.5870 -0.024768\n",
-      "2015-08-18  -39.299804  -19649.9020  1027700.6850 -0.018762\n",
-      "2015-08-19   27.100586  -13550.2930  1014150.3920 -0.013185\n",
-      "2015-08-20  -98.299805   49149.9025  1063300.2945  0.048464\n",
-      "2015-08-21   -5.450196    2725.0980  1066025.3925  0.002563\n",
-      "2015-08-24 -246.950195  123475.0975  1189500.4900  0.115828\n",
-      "2015-08-25  -14.699707   -7349.8535  1182150.6365 -0.006179\n",
-      "2015-08-26  -73.399902  -36699.9510  1145450.6855 -0.031045\n",
-      "2015-08-27   27.350097  -13675.0485  1131775.6370 -0.011939\n",
-      "2015-08-28  -51.750000   25875.0000  1157650.6370  0.022862\n",
-      "2015-08-31  -37.950195   18975.0975  1176625.7345  0.016391\n",
-      "2015-09-01 -122.100097   61050.0485  1237675.7830  0.051886\n",
-      "2015-09-02 -139.649902   69824.9510  1307500.7340  0.056416\n",
-      "2015-09-03   48.549805   24274.9025  1331775.6365  0.018566\n",
-      "2015-09-04 -148.350097  -74175.0485  1257600.5880 -0.055696\n",
-      "2015-09-07 -127.050293  -63525.1465  1194075.4415 -0.050513\n",
-      "2015-09-08  100.549805   50274.9025  1244350.3440  0.042104\n",
-      "2015-09-09   12.750000    6375.0000  1250725.3440  0.005123\n",
-      "2015-09-10   59.050293   29525.1465  1280250.4905  0.023606\n",
-      "2015-09-11  -44.500000  -22250.0000  1258000.4905 -0.017379\n",
-      "2015-09-14   61.149902   30574.9510  1288575.4415  0.024304\n",
-      "2015-09-15  -38.250000  -19125.0000  1269450.4415 -0.014842\n",
-      "2015-09-16   12.299804    6149.9020  1275600.3435  0.004845\n",
-      "2015-09-18   14.449707    7224.8535  1282825.1970  0.005664\n",
-      "2015-09-21   65.600098   32800.0490  1315625.2460  0.025569\n",
-      "2015-09-22 -202.799805 -101399.9025  1214225.3435 -0.077074\n",
-      "2015-09-23  108.600097   54300.0485  1268525.3920  0.044720\n",
-      "2015-09-24   30.100098   15050.0490  1283575.4410  0.011864\n",
-      "2015-09-28  -97.099610   48549.8050  1332125.2460  0.037824\n",
-      "2015-09-29  117.599610  -58799.8050  1273325.4410 -0.044140\n",
-      "2015-09-30   24.649902   12324.9510  1285650.3920  0.009679\n",
-      "2015-10-01  -41.149903  -20574.9515  1265075.4405 -0.016004\n"
+      "            price_diff      profit         total   returns\n",
+      "Date                                                      \n",
+      "2015-09-24   30.100098  15050.0490  1283575.4410  0.011864\n",
+      "2015-09-28  -97.099610  48549.8050  1332125.2460  0.037824\n",
+      "2015-09-29  117.599610 -58799.8050  1273325.4410 -0.044140\n",
+      "2015-09-30   24.649902  12324.9510  1285650.3920  0.009679\n",
+      "2015-10-01  -41.149903 -20574.9515  1265075.4405 -0.016004\n"
      ]
     }
    ],
@@ -1863,7 +1853,7 @@
     " \n",
     "portfolio = MarketIntradayPortfolio(symbol, bars, signals) \n",
     "returns = portfolio.backtest_portfolio()\n",
-    "print (returns)"
+    "print (returns.tail(5))"
    ]
   },
   {
@@ -1907,22 +1897,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Performance **\n",
+    "\n",
+    "Above is the CNX Nifty Close Price between 31 July 2015 and 01 October 2015. First graph shows the actual trend of the market index for above period. In this particular period the market had a return is negative (-4.76%).\n",
+    "<br/>\n",
+    "Portofolio return for the same period. Second graph shows the trend of the Porfolio generated on top of our predictions. Start value is 1M INR which end up at a final value, after 3 months of trading, of about 26%. "
+   ]
   },
   {
    "cell_type": "code",
